2023-12-14  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-misc.el (howm-narrow-to-memo, howm-toggle-narrow):
	add docstrings as a workaround for a possible bug of
	disabled-command-function in emacs-29
	thx > Andrei Sukhovskii san (qojop at tuta.io)

2023-12-03  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* README.md: add link to YouTube video
	thx > Raoul Comninos san (revcomninos at gmail.com)

2023-07-30  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm.el.in: update author email

2023-07-30  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* README.md: add link to Russian manual
	thx > Andrei Sukhovskii san (qojop at tuta.io)

2023-07-15  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.5.1-snapshot5

	* howm-misc.el (howm-remember-submit):
	make the blank line removable after the input text in howm-remember
	thx > Andrei Sukhovskii san (qojop at tuta.io)

	* howm-vars.el (howm-remember-insertion-format):
	ditto

2023-07-01  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* iigrep.el: avoid warning in byte-compilation
	"... is not known to be defined."

	* howm-view.el: fix issue on dired-x
	thx > Andrei Sukhovskii san (qojop at tuta.io)

2023-02-18  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.5.1-snapshot4

2023-02-18  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-view.el (howm-view-toggle-uniq): fix buggy "u" key
	By "C-c , s foo RET u C-c , s bar RET u", one got the old "foo" result.
	thx > Andrei Sukhovskii san (qojop at tuta.io)

2023-02-16  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.5.1-snapshot3

2023-02-16  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* howm-mkmenu.el (howm-mkmenu-rules): use UTF-8 for *-ja.el
	ref. https://osdn.net/projects/howm/ticket/47364

	* howm-lang-ja.el: converted to UTF-8

	* howm-menu-ja.el: ditto.

2023-01-29  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* configure.ac: version 1.5.1-snapshot2

2023-01-28  HIRAOKA Kazuyuki  <khi@users.osdn.me>
