@@ -117,6 +117,12 @@ For customization, try 'M-x customize-group RET howm RET'.
 
 <h2>Update from old version</h2>
 
+<h3>1.5.0 to 1.5.1-snapshot*</h3>
+
+<p>
+The incremental search is enabled by default. See M-x customize-group RET howm-iigrep RET.
+</p>
+
 <h3>1.4.8 to 1.5.0</h3>
 
 <p>
